--- a/index.html
+++ b/index.html
@@ -10,38 +10,47 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
     <title>WebStudio</title>
   </head>
   <body>
     <!-- Шапка сторінки -->
-    <header>
-      <nav class="site-nav">
-        <a class="logo" href="./index.html"
-          >Web<span class="accent">Studio</span>
-        </a>
-        <ul class="site-nav list">
+    <header class="header">
+      <div class="container">
+        <nav class="site-nav">
+          <a class="logo" href="./index.html"
+            >Web<span class="accent">Studio</span>
+          </a>
+          <ul class="site-nav list">
+            <li>
+              <a href="./index.html" class="nav-link link current">Студія</a>
+            </li>
+            <li>
+              <a href="./portfolio.html" class="nav-link link">Портфоліо</a>
+            </li>
+            <li><a href="#" class="nav-link link">Контакти</a></li>
+          </ul>
+        </nav>
+        <ul class="auth-nav list">
           <li>
-            <a href="./index.html" class="nav-link link current">Студія</a>
+            <a href="mailto:info@devstudio.com" class="auth-link link"
+              >info@devstudio.com</a
+            >
           </li>
           <li>
-            <a href="./portfolio.html" class="nav-link link">Портфоліо</a>
+            <a href="tel:+380961111111" class="auth-link link"
+              >+38 096 111 11 11</a
+            >
           </li>
-          <li><a href="#" class="nav-link link">Контакти</a></li>
         </ul>
-      </nav>
-      <ul class="auth-nav list">
-        <li>
-          <a href="mailto:info@devstudio.com" class="auth-link link"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li>
-          <a href="tel:+380961111111" class="auth-link link"
-            >+38 096 111 11 11</a
-          >
-        </li>
-      </ul>
+      </div>
     </header>
     <main>
       <!-- Секція герой -->
