--- a/index.html
+++ b/index.html
@@ -23,21 +23,19 @@
   <body>
     <!-- Шапка сторінки -->
     <header class="header">
-      <div class="container">
-        <nav class="site-nav">
-          <a class="logo" href="./index.html"
-            >Web<span class="accent">Studio</span>
-          </a>
-          <ul class="site-nav list">
-            <li>
-              <a href="./index.html" class="nav-link link current">Студія</a>
-            </li>
-            <li>
-              <a href="./portfolio.html" class="nav-link link">Портфоліо</a>
-            </li>
-            <li><a href="#" class="nav-link link">Контакти</a></li>
-          </ul>
-        </nav>
+      <nav class="site-nav container">
+        <a class="logo" href="./index.html"
+          >Web<span class="accent">Studio</span>
+        </a>
+        <ul class="site-nav list">
+          <li>
+            <a href="./index.html" class="nav-link link current">Студія</a>
+          </li>
+          <li>
+            <a href="./portfolio.html" class="nav-link link">Портфоліо</a>
+          </li>
+          <li><a href="#" class="nav-link link">Контакти</a></li>
+        </ul>
         <ul class="auth-nav list">
           <li>
             <a href="mailto:info@devstudio.com" class="auth-link link"
@@ -50,7 +48,7 @@
             >
           </li>
         </ul>
-      </div>
+      </nav>
     </header>
     <main>
       <!-- Секція герой -->
@@ -59,7 +57,7 @@
         <button type="button" class="hero-btn">Замовити послугу</button>
       </section>
       <!-- Можливості студії -->
-      <section class="studio-capabilities">
+      <section class="section">
         <h2 class="visually-hidden">Презенцація можливостей студії</h2>
         <ul class="studio-list list">
           <li class="studio-item">
@@ -92,7 +90,7 @@
         </ul>
       </section>
       <!-- Приклади робіт -->
-      <section>
+      <section class="section">
         <h2 class="work-examp-title">Чим ми займаємося</h2>
         <ul class="work-examp-list list">
           <li class="work-examp-item">
@@ -115,7 +113,7 @@
         </ul>
       </section>
       <!-- Команда -->
-      <section class="team">
+      <section class="section team">
         <h2 class="team-main-title">Наша команда</h2>
         <ul class="team-list list">
           <li class="team-item">
