work on footer index

--- a/portfolio.html
+++ b/portfolio.html
@@ -53,7 +53,7 @@
     <main>
       <!-- Main section -->
       <!-- Filters -->
-      <section class="section">
+      <section class="portf">
         <h1 class="visually-hidden">Приклади робіт</h1>
         <ul class="portf-list list">
           <li class="filters-item">
