--- a/index.html
+++ b/index.html
@@ -58,101 +58,111 @@
       </section>
       <!-- Можливості студії -->
       <section class="section">
-        <h2 class="visually-hidden">Презенцація можливостей студії</h2>
-        <ul class="studio-list list">
-          <li class="studio-item">
-            <h3 class="studio-title">увага до деталей</h3>
-            <p class="studio-text">
-              Ідейні міркування, і навіть початок повсякденної роботи з
-              формування позиції.
-            </p>
-          </li>
-          <li class="studio-item">
-            <h3 class="studio-title">пунктуальність</h3>
-            <p class="studio-text">
-              Завдання організації, особливо рамки і місце навчання кадрів тягне
-              у себе.
-            </p>
-          </li>
-          <li class="studio-item">
-            <h3 class="studio-title">планування</h3>
-            <p class="studio-text">
-              Так само консультація з широким активом значною мірою зумовлює.
-            </p>
-          </li>
-          <li class="studio-item">
-            <h3 class="studio-title">сучасні технології</h3>
-            <p class="studio-text">
-              Значимість цих проблем настільки очевидна, що реалізація планових
-              завдань.
-            </p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="visually-hidden">Презенцація можливостей студії</h2>
+          <ul class="studio-list list">
+            <li class="studio-item">
+              <h3 class="studio-title">увага до деталей</h3>
+              <p class="studio-text">
+                Ідейні міркування, і навіть початок повсякденної роботи з
+                формування позиції.
+              </p>
+            </li>
+            <li class="studio-item">
+              <h3 class="studio-title">пунктуальність</h3>
+              <p class="studio-text">
+                Завдання організації, особливо рамки і місце навчання кадрів
+                тягне у себе.
+              </p>
+            </li>
+            <li class="studio-item">
+              <h3 class="studio-title">планування</h3>
+              <p class="studio-text">
+                Так само консультація з широким активом значною мірою зумовлює.
+              </p>
+            </li>
+            <li class="studio-item">
+              <h3 class="studio-title">сучасні технології</h3>
+              <p class="studio-text">
+                Значимість цих проблем настільки очевидна, що реалізація
+                планових завдань.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- Приклади робіт -->
-      <section class="section">
-        <h2 class="work-examp-title">Чим ми займаємося</h2>
-        <ul class="work-examp-list list">
-          <li class="work-examp-item">
-            <img
-              src="./images/img_1.jpg"
-              alt="Зображення рук на клавіатурі"
-              width="370"
-            />
-          </li>
-          <li class="work-examp-item">
-            <img
-              src="./images/img_2.jpg"
-              alt="Зображення смартфону та ноубуку на робочомі столі"
-              width="370"
-            />
-          </li>
-          <li class="work-examp-item">
-            <img src="./images/img_3.jpg" alt="Планшет у руках" width="370" />
-          </li>
-        </ul>
+      <section class="section-work">
+        <div class="container">
+          <h2 class="work-examp-title">Чим ми займаємося</h2>
+          <ul class="work-examp-list list">
+            <li class="work-examp-item">
+              <img
+                src="./images/img_1.jpg"
+                alt="Зображення рук на клавіатурі"
+                width="370"
+              />
+            </li>
+            <li class="work-examp-item">
+              <img
+                src="./images/img_2.jpg"
+                alt="Зображення смартфону та ноубуку на робочомі столі"
+                width="370"
+              />
+            </li>
+            <li class="work-examp-item">
+              <img src="./images/img_3.jpg" alt="Планшет у руках" width="370" />
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- Команда -->
       <section class="section team">
-        <h2 class="team-main-title">Наша команда</h2>
-        <ul class="team-list list">
-          <li class="team-item">
-            <img
-              src="./images/img_people_1.jpg"
-              alt="Product Designer"
-              width="270"
-            />
-            <h3 class="team-title">Ігор Дем'яненко</h3>
-            <p class="team-pos" lang="en">Product Designer</p>
-          </li>
-          <li class="team-item">
-            <img
-              src="./images/img_people_2.jpg"
-              alt="Ольга Рєпіна"
-              width="270"
-            />
-            <h3 class="team-title">Ольга Рєпіна</h3>
-            <p class="team-pos" lang="en">Frontend Developer</p>
-          </li>
-          <li class="team-item">
-            <img
-              src="./images/img_people_3.jpg"
-              alt="Микола Тарасов"
-              width="270"
-            />
-            <h3 class="team-title">Микола Тарасов</h3>
-            <p class="team-pos" lang="en">Marketing</p>
-          </li>
-          <li class="team-item">
-            <img
-              src="./images/img_people_4.jpg"
-              alt="Михайло Єрмаков"
-              width="270"
-            />
-            <h3 class="team-title">Михайло Єрмаков</h3>
-            <p class="team-pos" lang="en">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="team-main-title">Наша команда</h2>
+          <ul class="team-list list">
+            <li class="team-item">
+              <img
+                class="img-foto"
+                src="./images/img_people_1.jpg"
+                alt="Product Designer"
+                width="270"
+              />
+              <h3 class="team-title">Ігор Дем'яненко</h3>
+              <p class="team-pos" lang="en">Product Designer</p>
+            </li>
+            <li class="team-item">
+              <img
+                class="img-foto"
+                src="./images/img_people_2.jpg"
+                alt="Ольга Рєпіна"
+                width="270"
+              />
+              <h3 class="team-title">Ольга Рєпіна</h3>
+              <p class="team-pos" lang="en">Frontend Developer</p>
+            </li>
+            <li class="team-item">
+              <img
+                class="img-foto"
+                src="./images/img_people_3.jpg"
+                alt="Микола Тарасов"
+                width="270"
+              />
+              <h3 class="team-title">Микола Тарасов</h3>
+              <p class="team-pos" lang="en">Marketing</p>
+            </li>
+            <li class="team-item">
+              <img
+                class="img-foto"
+                src="./images/img_people_4.jpg"
+                alt="Михайло Єрмаков"
+                width="270"
+              />
+              <h3 class="team-title">Михайло Єрмаков</h3>
+              <p class="team-pos" lang="en">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <!-- Футер -->
