--- a/index.html
+++ b/index.html
@@ -167,33 +167,35 @@
     </main>
     <!-- Футер -->
     <footer class="footer">
-      <a class="logo" href="./index.html"
-        >Web<span class="accent-footer">Studio</span>
-      </a>
-      <!-- <a href="./index.html">Web <span>Studio</span> </a> -->
-      <address>
-        <ul class="footer-list list">
-          <li class="footer-item">
-            <a
-              class="footer-adres link"
-              href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
-              target="_blank"
-              rel="noopener noreferrer nofollow"
-              >г. Киев, пр-т Леси Украинки, 26</a
-            >
-          </li>
-          <li class="footer-item">
-            <a class="footer-nav link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="footer-item">
-            <a class="footer-nav link" href="tel:+380961111111"
-              >+38 096 111 11 11</a
-            >
-          </li>
-        </ul>
-      </address>
+      <div class="container">
+        <a class="logo" href="./index.html"
+          >Web<span class="accent-footer">Studio</span>
+        </a>
+        <!-- <a href="./index.html">Web <span>Studio</span> </a> -->
+        <address>
+          <ul class="footer-list list">
+            <li class="footer-item">
+              <a
+                class="footer-adres link"
+                href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+                >г. Киев, пр-т Леси Украинки, 26</a
+              >
+            </li>
+            <li class="footer-item">
+              <a class="footer-nav link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="footer-item">
+              <a class="footer-nav link" href="tel:+380961111111"
+                >+38 096 111 11 11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
