start used flex

--- a/index.html
+++ b/index.html
@@ -28,21 +28,23 @@
           >Web<span class="accent">Studio</span>
         </a>
         <ul class="site-nav list">
-          <li>
+          <li class="site-nav item">
             <a href="./index.html" class="nav-link link current">Студія</a>
           </li>
-          <li>
+          <li class="site-nav item">
             <a href="./portfolio.html" class="nav-link link">Портфоліо</a>
           </li>
-          <li><a href="#" class="nav-link link">Контакти</a></li>
+          <li class="site-nav item">
+            <a href="#" class="nav-link link">Контакти</a>
+          </li>
         </ul>
         <ul class="auth-nav list">
-          <li>
+          <li class="auth-nav item">
             <a href="mailto:info@devstudio.com" class="auth-link link"
               >info@devstudio.com</a
             >
           </li>
-          <li>
+          <li class="auth-nav item">
             <a href="tel:+380961111111" class="auth-link link"
               >+38 096 111 11 11</a
             >
