--- a/index.html
+++ b/index.html
@@ -23,21 +23,23 @@
   <body>
     <!-- Шапка сторінки -->
     <header class="header">
-      <nav class="site-nav container">
-        <a class="logo" href="./index.html"
-          >Web<span class="accent">Studio</span>
-        </a>
-        <ul class="site-nav list">
-          <li class="site-nav item">
-            <a href="./index.html" class="nav-link link current">Студія</a>
-          </li>
-          <li class="site-nav item">
-            <a href="./portfolio.html" class="nav-link link">Портфоліо</a>
-          </li>
-          <li class="site-nav item">
-            <a href="#" class="nav-link link">Контакти</a>
-          </li>
-        </ul>
+      <div class="header container">
+        <nav class="site-nav">
+          <a class="logo" href="./index.html"
+            >Web<span class="accent">Studio</span>
+          </a>
+          <ul class="site-nav list">
+            <li class="site-nav item">
+              <a href="./index.html" class="nav-link link current">Студія</a>
+            </li>
+            <li class="site-nav item">
+              <a href="./portfolio.html" class="nav-link link">Портфоліо</a>
+            </li>
+            <li class="site-nav item">
+              <a href="#" class="nav-link link">Контакти</a>
+            </li>
+          </ul>
+        </nav>
         <ul class="auth-nav list">
           <li class="auth-nav item">
             <a href="mailto:info@devstudio.com" class="auth-link link"
@@ -50,7 +52,7 @@
             >
           </li>
         </ul>
-      </nav>
+      </div>
     </header>
     <main>
       <!-- Секція герой -->
