--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <body>
     <!-- Шапка сторінки -->
     <header class="header">
-      <div class="header container">
+      <div class="header-container container">
         <nav class="site-nav">
           <a class="logo" href="./index.html"
             >Web<span class="accent">Studio</span>
@@ -61,7 +61,7 @@
         <button type="button" class="hero-btn">Замовити послугу</button>
       </section>
       <!-- Можливості студії -->
-      <section class="section">
+      <section class="studio section">
         <div class="container">
           <h2 class="visually-hidden">Презенцація можливостей студії</h2>
           <ul class="studio-list list">
@@ -96,7 +96,7 @@
         </div>
       </section>
       <!-- Приклади робіт -->
-      <section class="section-work">
+      <section class="section">
         <div class="container">
           <h2 class="work-examp-title">Чим ми займаємося</h2>
           <ul class="work-examp-list list">
@@ -122,8 +122,8 @@
       </section>
       <!-- Команда -->
       <section class="section team">
-        <div class="container">
-          <h2 class="team-main-title">Наша команда</h2>
+        <h2 class="team-main-title">Наша команда</h2>
+        <div class="team-container container">
           <ul class="team-list list">
             <li class="team-item">
               <img
@@ -172,11 +172,13 @@
     <!-- Футер -->
     <footer class="footer">
       <div class="container">
-        <a class="logo" href="./index.html"
-          >Web<span class="accent-footer">Studio</span>
-        </a>
+        <div class="footer-logo">
+          <a class="logo" href="./index.html"
+            >Web<span class="accent-footer">Studio</span>
+          </a>
+        </div>
         <!-- <a href="./index.html">Web <span>Studio</span> </a> -->
-        <address>
+        <address class="footer-data">
           <ul class="footer-list list">
             <li class="footer-item">
               <a
