--- a/portfolio.html
+++ b/portfolio.html
@@ -22,33 +22,39 @@
   </head>
   <body>
     <!-- Шапка сторінки-->
-    <header>
-      <nav class="site-nav container">
-        <a class="logo" href="./index.html"
-          >Web<span class="accent">Studio</span>
-        </a>
-        <ul class="site-nav list">
-          <li><a class="nav-link link" href="./index.html">Студія</a></li>
-          <li>
-            <a class="nav-link link current" href="./portfolio.html"
-              >Портфоліо</a
-            >
-          </li>
-          <li><a class="nav-link link" href="#">Контакти</a></li>
-        </ul>
+    <header class="header">
+      <div class="header-container container">
+        <nav class="site-nav">
+          <a class="logo" href="./index.html"
+            >Web<span class="accent">Studio</span>
+          </a>
+          <ul class="site-nav list">
+            <li class="site-nav item">
+              <a href="./index.html" class="nav-link link">Студія</a>
+            </li>
+            <li class="site-nav item">
+              <a href="./portfolio.html" class="nav-link link current"
+                >Портфоліо</a
+              >
+            </li>
+            <li class="site-nav item">
+              <a href="#" class="nav-link link">Контакти</a>
+            </li>
+          </ul>
+        </nav>
         <ul class="auth-nav list">
-          <li>
-            <a class="auth-link link" href="mailto:info@devstudio.com"
+          <li class="auth-nav item">
+            <a href="mailto:info@devstudio.com" class="auth-link link"
               >info@devstudio.com</a
             >
           </li>
-          <li>
+          <li class="auth-nav item">
             <a href="tel:+380961111111" class="auth-link link"
               >+38 096 111 11 11</a
             >
           </li>
         </ul>
-      </nav>
+      </div>
     </header>
     <main>
       <!-- Main section -->
@@ -197,33 +203,37 @@
       </section>
     </main>
     <footer class="footer">
-      <a class="logo" href="./index.html"
-        >Web<span class="accent-footer">Studio</span>
-      </a>
-      <!-- <a href="./index.html">Web <span>Studio</span> </a> -->
-      <address>
-        <ul class="footer-list list">
-          <li class="footer-item">
-            <a
-              class="footer-adres link"
-              href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
-              target="_blank"
-              rel="noopener noreferrer nofollow"
-              >г. Киев, пр-т Леси Украинки, 26</a
-            >
-          </li>
-          <li class="footer-item">
-            <a class="footer-nav link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="footer-item">
-            <a class="footer-nav link" href="tel:+380961111111"
-              >+38 096 111 11 11</a
-            >
-          </li>
-        </ul>
-      </address>
+      <div class="container">
+        <div class="footer-logo">
+          <a class="logo" href="./index.html"
+            >Web<span class="accent-footer">Studio</span>
+          </a>
+        </div>
+        <!-- <a href="./index.html">Web <span>Studio</span> </a> -->
+        <address class="footer-data">
+          <ul class="footer-list list">
+            <li class="footer-item">
+              <a
+                class="footer-adres link"
+                href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+                >г. Киев, пр-т Леси Украинки, 26</a
+              >
+            </li>
+            <li class="footer-item">
+              <a class="footer-nav link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="footer-item">
+              <a class="footer-nav link" href="tel:+380961111111"
+                >+38 096 111 11 11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
