start portf block

--- a/portfolio.html
+++ b/portfolio.html
@@ -59,10 +59,10 @@
     <main>
       <!-- Main section -->
       <!-- Filters -->
-      <section class="section">
-        <div class="container">
+      <section class="filters-section section">
+        <div class="filters-container container">
           <h1 class="visually-hidden">Приклади робіт</h1>
-          <ul class="portf-list list">
+          <ul class="filters-list list">
             <li class="filters-item">
               <button type="button" class="filters-btn">Усі</button>
             </li>
@@ -80,8 +80,9 @@
             </li>
           </ul>
         </div>
-
-        <!-- Image list -->
+      </section>
+      <!-- Image list -->
+      <section class="img-content section">
         <div class="container">
           <ul class="=img-list list">
             <li class="img-item">
