--- a/portfolio.html
+++ b/portfolio.html
@@ -58,149 +58,155 @@
     </header>
     <main>
       <!-- Main section -->
-      <!-- Filters -->
-      <section class="filters-section section">
-        <div class="filters-container container">
-          <h1 class="visually-hidden">Приклади робіт</h1>
-          <ul class="filters-list list">
-            <li class="filters-item">
-              <button type="button" class="filters-btn">Усі</button>
-            </li>
-            <li class="filters-item">
-              <button type="button" class="filters-btn">Веб-сайти</button>
-            </li>
-            <li class="filters-item">
-              <button type="button" class="filters-btn">Додатки</button>
-            </li>
-            <li class="filters-item">
-              <button type="button" class="filters-btn">Дизайн</button>
-            </li>
-            <li class="filters-item">
-              <button type="button" class="filters-btn">Маркетинг</button>
-            </li>
-          </ul>
-        </div>
-      </section>
-      <!-- Image list -->
-      <section class="img-content section">
-        <div class="container">
-          <ul class="=img-list list">
-            <li class="img-item">
-              <a href="#" class="img-link link"
-                ><img
-                  class="filters-img"
-                  src="./images/all_1.jpg"
-                  alt="Ноутбук"
-                  width="370"
-                />
-                <h2 class="img-title">Технокряк</h2>
-                <p class="img-text">Веб-сайт</p></a
-              >
-            </li>
-            <li class="img-item">
-              <a href="#" class="img-link link"
-                ><img
-                  class="filters-img"
-                  src="./images/all_2.jpg"
-                  alt="Баскетболісти"
-                  width="370"
-                />
-                <h2 class="img-title">
-                  Постер <span lang="en">New Orlean vs Golden Star</span>
-                </h2>
-                <p class="img-text">Дизайн</p></a
-              >
-            </li>
-            <li class="img-item">
-              <a href="#" class="img-link link"
-                ><img
-                  class="filters-img"
-                  src="./images/all_3.jpg"
-                  alt="Емблема ресторану морепродуктів"
-                  width="370"
-                />
-                <h2 class="img-title">
-                  Ресторан <span lang="en">Seafood </span>
-                </h2>
-                <p class="img-text">Додаток</p></a
-              >
-            </li>
-            <li class="img-item">
-              <a href="#" class="img-link link"
-                ><img
-                  class="filters-img"
-                  src="./images/all_4.jpg"
-                  alt="Наушники"
-                  width="370"
-                />
-                <h2 class="img-title">Проєкт <span lang="en"> Prime </span></h2>
-                <p class="img-text">Маркетинг</p></a
-              >
-            </li>
-            <li class="img-item">
-              <a href="#" class="img-link link"
-                ><img
-                  class="filters-img"
-                  src="./images/all_5.jpg"
-                  alt="Картоні коробки"
-                  width="370"
-                />
-                <h2 class="img-title">Проєкт <span lang="en">Boxes</span></h2>
-                <p class="img-text">Додаток</p></a
-              >
-            </li>
-            <li class="img-item">
-              <a href="#" class="img-link link"
-                ><img
-                  class="filters-img"
-                  src="./images/all_6.jpg"
-                  alt="Монітор"
-                  width="370"
-                />
-                <h2 class="img-title" lang="en">Inspiration has no Borders</h2>
-                <p class="img-text">Веб-сайт</p></a
-              >
-            </li>
-            <li class="img-item">
-              <a href="#" class="img-link link"
-                ><img
-                  class="filters-img"
-                  src="./images/all_7.jpg"
-                  alt="Розгорнути книга"
-                  width="370"
-                />
-                <h2 class="img-title">
-                  Видання <span lang="en">Limited Edition</span>
-                </h2>
-                <p class="img-text">Дизайн</p></a
-              >
-            </li>
-            <li class="img-item">
-              <a href="#" class="img-link link"
-                ><img
-                  class="filters-img"
-                  src="./images/all_8.jpg"
-                  alt="Ярлик на мотузці"
-                  width="370"
-                />
-                <h2 class="img-title">Проєкт <span lang="en">Lab</span></h2>
-                <p class="img-text">Маркетинг</p></a
-              >
-            </li>
-            <li class="img-item">
-              <a href="#" class="img-link link"
-                ><img
-                  class="filters-img"
-                  src="./images/all_9.jpg"
-                  alt="Набір тексту на ноутбуці"
-                  width="370"
-                />
-                <h2 class="img-title" lang="en">Growing Business</h2>
-                <p class="img-text">Додаток</p></a
-              >
-            </li>
-          </ul>
-        </div>
+      <section class="portfolio section">
+        <!-- Filters -->
+        <section class="filters-section">
+          <div class="filters-container container">
+            <h1 class="visually-hidden">Приклади робіт</h1>
+            <ul class="filters-list list">
+              <li class="filters-item">
+                <button type="button" class="filters-btn">Усі</button>
+              </li>
+              <li class="filters-item">
+                <button type="button" class="filters-btn">Веб-сайти</button>
+              </li>
+              <li class="filters-item">
+                <button type="button" class="filters-btn">Додатки</button>
+              </li>
+              <li class="filters-item">
+                <button type="button" class="filters-btn">Дизайн</button>
+              </li>
+              <li class="filters-item">
+                <button type="button" class="filters-btn">Маркетинг</button>
+              </li>
+            </ul>
+          </div>
+        </section>
+        <!-- Image list -->
+        <section class="img-content">
+          <div class="container">
+            <ul class="img-list list">
+              <li class="img-item">
+                <a href="#" class="img-link link"
+                  ><img
+                    class="filters-img"
+                    src="./images/all_1.jpg"
+                    alt="Ноутбук"
+                    width="370"
+                  />
+                  <h2 class="img-title">Технокряк</h2>
+                  <p class="img-text">Веб-сайт</p></a
+                >
+              </li>
+              <li class="img-item">
+                <a href="#" class="img-link link"
+                  ><img
+                    class="filters-img"
+                    src="./images/all_2.jpg"
+                    alt="Баскетболісти"
+                    width="370"
+                  />
+                  <h2 class="img-title">
+                    Постер <span lang="en">New Orlean vs Golden Star</span>
+                  </h2>
+                  <p class="img-text">Дизайн</p></a
+                >
+              </li>
+              <li class="img-item">
+                <a href="#" class="img-link link"
+                  ><img
+                    class="filters-img"
+                    src="./images/all_3.jpg"
+                    alt="Емблема ресторану морепродуктів"
+                    width="370"
+                  />
+                  <h2 class="img-title">
+                    Ресторан <span lang="en">Seafood </span>
+                  </h2>
+                  <p class="img-text">Додаток</p></a
+                >
+              </li>
+              <li class="img-item">
+                <a href="#" class="img-link link"
+                  ><img
+                    class="filters-img"
+                    src="./images/all_4.jpg"
+                    alt="Наушники"
+                    width="370"
+                  />
+                  <h2 class="img-title">
+                    Проєкт <span lang="en"> Prime </span>
+                  </h2>
+                  <p class="img-text">Маркетинг</p></a
+                >
+              </li>
+              <li class="img-item">
+                <a href="#" class="img-link link"
+                  ><img
+                    class="filters-img"
+                    src="./images/all_5.jpg"
+                    alt="Картоні коробки"
+                    width="370"
+                  />
+                  <h2 class="img-title">Проєкт <span lang="en">Boxes</span></h2>
+                  <p class="img-text">Додаток</p></a
+                >
+              </li>
+              <li class="img-item">
+                <a href="#" class="img-link link"
+                  ><img
+                    class="filters-img"
+                    src="./images/all_6.jpg"
+                    alt="Монітор"
+                    width="370"
+                  />
+                  <h2 class="img-title" lang="en">
+                    Inspiration has no Borders
+                  </h2>
+                  <p class="img-text">Веб-сайт</p></a
+                >
+              </li>
+              <li class="img-item">
+                <a href="#" class="img-link link"
+                  ><img
+                    class="filters-img"
+                    src="./images/all_7.jpg"
+                    alt="Розгорнути книга"
+                    width="370"
+                  />
+                  <h2 class="img-title">
+                    Видання <span lang="en">Limited Edition</span>
+                  </h2>
+                  <p class="img-text">Дизайн</p></a
+                >
+              </li>
+              <li class="img-item">
+                <a href="#" class="img-link link"
+                  ><img
+                    class="filters-img"
+                    src="./images/all_8.jpg"
+                    alt="Ярлик на мотузці"
+                    width="370"
+                  />
+                  <h2 class="img-title">Проєкт <span lang="en">Lab</span></h2>
+                  <p class="img-text">Маркетинг</p></a
+                >
+              </li>
+              <li class="img-item">
+                <a href="#" class="img-link link"
+                  ><img
+                    class="filters-img"
+                    src="./images/all_9.jpg"
+                    alt="Набір тексту на ноутбуці"
+                    width="370"
+                  />
+                  <h2 class="img-title" lang="en">Growing Business</h2>
+                  <p class="img-text">Додаток</p></a
+                >
+              </li>
+            </ul>
+          </div>
+        </section>
       </section>
     </main>
     <footer class="footer">
