--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </header>
     <main>
       <!-- Секція герой -->
-      <section class="hero">
+      <section class="hero section">
         <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
         <button type="button" class="hero-btn">Замовити послугу</button>
       </section>
@@ -97,7 +97,7 @@
         </div>
       </section>
       <!-- Приклади робіт -->
-      <section class="section">
+      <section class="work-examp section">
         <div class="container">
           <h2 class="work-examp-title">Чим ми займаємося</h2>
           <ul class="work-examp-list list">
@@ -122,7 +122,7 @@
         </div>
       </section>
       <!-- Команда -->
-      <section class="section team">
+      <section class="team section">
         <h2 class="team-main-title">Наша команда</h2>
         <div class="team-container container">
           <ul class="team-list list">
@@ -173,13 +173,12 @@
 
     <!-- Футер -->
 
-    <footer class="footer">
+    <footer class="footer section">
       <div class="container">
-        <div class="footer-logo">
-          <a class="logo" href="./index.html"
-            >Web<span class="accent-footer">Studio</span>
-          </a>
-        </div>
+        <a class="footer-logo" href="./index.html"
+          >Web<span class="accent-footer">Studio</span>
+        </a>
+
         <!-- <a href="./index.html">Web <span>Studio</span> </a> -->
         <address class="footer-data">
           <ul class="footer-list list">
