finish mentor correction

--- a/portfolio.html
+++ b/portfolio.html
@@ -59,9 +59,8 @@
     <main>
       <!-- Main section -->
       <section class="portfolio section">
-        <!-- Filters -->
-
-        <div class="filters-container container">
+        <div class="container">
+          <!-- Filters -->
           <h1 class="visually-hidden">Приклади робіт</h1>
           <ul class="filters-list list">
             <li class="filters-item">
@@ -80,11 +79,9 @@
               <button type="button" class="filters-btn">Маркетинг</button>
             </li>
           </ul>
-        </div>
 
-        <!-- Image list -->
+          <!-- Image list -->
 
-        <div class="container">
           <ul class="img-list list">
             <li class="img-item">
               <a href="#" class="img-link link"
@@ -94,9 +91,11 @@
                   alt="Ноутбук"
                   width="370"
                 />
-                <h2 class="img-title">Технокряк</h2>
-                <p class="img-text">Веб-сайт</p></a
-              >
+                <div class="image-wrap">
+                  <h2 class="img-title">Технокряк</h2>
+                  <p class="img-text">Веб-сайт</p>
+                </div>
+              </a>
             </li>
             <li class="img-item">
               <a href="#" class="img-link link"
@@ -106,10 +105,12 @@
                   alt="Баскетболісти"
                   width="370"
                 />
-                <h2 class="img-title">
-                  Постер <span lang="en">New Orlean vs Golden Star</span>
-                </h2>
-                <p class="img-text">Дизайн</p></a
+                <div class="image-wrap">
+                  <h2 class="img-title">
+                    Постер <span lang="en">New Orlean vs Golden Star</span>
+                  </h2>
+                  <p class="img-text">Дизайн</p>
+                </div></a
               >
             </li>
             <li class="img-item">
@@ -120,11 +121,13 @@
                   alt="Емблема ресторану морепродуктів"
                   width="370"
                 />
-                <h2 class="img-title">
-                  Ресторан <span lang="en">Seafood </span>
-                </h2>
-                <p class="img-text">Додаток</p></a
-              >
+                <div class="image-wrap">
+                  <h2 class="img-title">
+                    Ресторан <span lang="en">Seafood </span>
+                  </h2>
+                  <p class="img-text">Додаток</p>
+                </div>
+              </a>
             </li>
             <li class="img-item">
               <a href="#" class="img-link link"
@@ -134,9 +137,13 @@
                   alt="Наушники"
                   width="370"
                 />
-                <h2 class="img-title">Проєкт <span lang="en"> Prime </span></h2>
-                <p class="img-text">Маркетинг</p></a
-              >
+                <div class="image-wrap">
+                  <h2 class="img-title">
+                    Проєкт <span lang="en"> Prime </span>
+                  </h2>
+                  <p class="img-text">Маркетинг</p>
+                </div>
+              </a>
             </li>
             <li class="img-item">
               <a href="#" class="img-link link"
@@ -158,9 +165,13 @@
                   alt="Монітор"
                   width="370"
                 />
-                <h2 class="img-title" lang="en">Inspiration has no Borders</h2>
-                <p class="img-text">Веб-сайт</p></a
-              >
+                <div class="image-wrap">
+                  <h2 class="img-title" lang="en">
+                    Inspiration has no Borders
+                  </h2>
+                  <p class="img-text">Веб-сайт</p>
+                </div>
+              </a>
             </li>
             <li class="img-item">
               <a href="#" class="img-link link"
@@ -170,11 +181,13 @@
                   alt="Розгорнути книга"
                   width="370"
                 />
-                <h2 class="img-title">
-                  Видання <span lang="en">Limited Edition</span>
-                </h2>
-                <p class="img-text">Дизайн</p></a
-              >
+                <div class="image-wrap">
+                  <h2 class="img-title">
+                    Видання <span lang="en">Limited Edition</span>
+                  </h2>
+                  <p class="img-text">Дизайн</p>
+                </div>
+              </a>
             </li>
             <li class="img-item">
               <a href="#" class="img-link link"
@@ -184,9 +197,11 @@
                   alt="Ярлик на мотузці"
                   width="370"
                 />
-                <h2 class="img-title">Проєкт <span lang="en">Lab</span></h2>
-                <p class="img-text">Маркетинг</p></a
-              >
+                <div class="image-wrap">
+                  <h2 class="img-title">Проєкт <span lang="en">Lab</span></h2>
+                  <p class="img-text">Маркетинг</p>
+                </div>
+              </a>
             </li>
             <li class="img-item">
               <a href="#" class="img-link link"
@@ -196,21 +211,22 @@
                   alt="Набір тексту на ноутбуці"
                   width="370"
                 />
-                <h2 class="img-title" lang="en">Growing Business</h2>
-                <p class="img-text">Додаток</p></a
-              >
+                <div class="image-wrap">
+                  <h2 class="img-title" lang="en">Growing Business</h2>
+                  <p class="img-text">Додаток</p>
+                </div>
+              </a>
             </li>
           </ul>
         </div>
       </section>
     </main>
-    <footer class="footer">
+    <footer class="footer section">
       <div class="container">
-        <div class="footer-logo">
-          <a class="logo" href="./index.html"
-            >Web<span class="accent-footer">Studio</span>
-          </a>
-        </div>
+        <a class="footer-logo" href="./index.html"
+          >Web<span class="accent-footer">Studio</span>
+        </a>
+
         <!-- <a href="./index.html">Web <span>Studio</span> </a> -->
         <address class="footer-data">
           <ul class="footer-list list">
